# sat-solver

./: CMakeLists.txt  main.cpp
headers/: Assignment.h  CNF.h  Clause.h  DIMACSParser.h  DPLL.h  extensions.h
sources/: Assignment.cpp  CNF.cpp  Clause.cpp  DIMACSParser.cpp  DPLL.cpp
